updated docker file for Ubuntu 16.04

--- a/docker/default_config.ini
+++ b/docker/default_config.ini
@@ -1,8 +1,17 @@
 # Endpoint for P2P node to listen on
-p2p-endpoint = 0.0.0.0:9090
+#p2p-endpoint = 0.0.0.0:9090
 
 # P2P nodes to connect to on startup (may specify multiple times)
 # seed-node = 
+seed-node = "seed01.bitsharesnodes.com:1776"   # wackou
+seed-node = "seed05.bitsharesnodes.com:1776"   # Thom
+seed-node = "seed06.bitsharesnodes.com:1776"   # Thom
+seed-node = "seed07.bitsharesnodes.com:1776"   # Thom
+seed-node = "seed.roelandp.nl:1776"            # roelandp (Canada)
+seed-node = "bts-seed1.abit-more.com:62015"    # abit
+seed-node = "seeds.bitshares.eu:1776"          # xeroc
+seed-node = "51.15.61.160:1776"                # lafona
+seed-node = "128.199.143.47:2015"              # Harvey
 
 # JSON array of P2P nodes to connect to on startup
 # seed-nodes = 
